<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="next">Next</string>
    <string name="option_1">Option 1</string>
    <string name="submit">Submit</string>
    <string name="enter_your_question">Enter your Question</string>
    <string name="_1_5">1/5</string>
    <string name="option_2" />
    <string name="option_3" />
</resources>