<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="#64B5F6"
    tools:context=".QuestionActivity">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/enter_your_question"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

<ProgressBar
    android:id="@+id/progress_bar"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:progress="0"
    android:max="5"
    android:minHeight="50dp"
    style="?android:progressBarStyleHorizontal"/>

<TextView
    android:id="@+id/progress_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/_1_5"
    android:textSize="20sp"
    android:padding="10dp"
    android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/opt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/option_1"
        android:background="@drawable/question_option"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/opt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Option 2"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/opt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Option_3"
        android:background="@drawable/question_option"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/opt_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Option_4"
        android:padding="10dp"
        android:background="@drawable/question_option"
        android:textSize="18sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"/>

</LinearLayout>